# python-json-tools

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  ChangeLog  Makefile  Pipfile  README.md  cliff.toml  committed.toml  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  schema.json  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  DOCS.md  main.workflow
.github/workflows/: build.yml  check.yml  codeql-analysis.yml  pythonpackage.yml  release.yml  scheduled.yml  test.yml
action-a/: Dockerfile  entrypoint.sh
benches/: copy_json_iter.py  copy_plain_json.py  update_doc.py  update_json_iter.py  update_plain_json.py
docs/: conf.py  index.rst  presentation.md
docs/source/: json_tools.diff.rst  json_tools.iter.rst  json_tools.rst  json_tools.val.rst  modules.rst
gh-actions/py35-pipenv/: Dockerfile  entrypoint.sh
json_tools/: __init__.py  cli.py  convert.py  exceptions.py  jsonlib.py
json_tools/diff/: __init__.py
json_tools/iter/: __init__.py  json_iter.py  jsonl_iter.py
json_tools/val/: __init__.py  cli.py  exceptions.py
json_validator/: __init__.py  cli.py  exceptions.py
jt_iter/: __init__.py  json_iter.py  jsonl_iter.py  jsonlib.py
jt_val/: __init__.py  cli.py  exceptions.py
sb_json_tools/: __init__.py  cli.py  cli.pyi  exceptions.py  exceptions.pyi  json_iter.py  jsondiff.py  jsondiff.pyi  jsonl_iter.py  jsonlib.py  jt_iter.py  utils.py  utils.pyi
sb_json_tools/jt_iter/: json_iter.py  jsonl_iter.py  utils.py
sb_json_tools/jt_val/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi
sb_json_tools/tests/: test_cli.py  test_cli.pyi  test_iter.py  test_jsondiff.py  test_jsondiff.pyi  test_jt_iter.py  test_utils.pyi  utils.py  utils.pyi
sb_json_tools/tests/data/: array.json  invalid_many.json  invalid_property.json  validated.json
sb_json_tools/tests/jt_val/: test_numeric_types.pyi  test_streaming_validate.pyi
src/json_validator/: __init__.py
src/jt_diff/: jsondiff.py
src/jt_iter/: __init__.py  json_iter.py  jsonl_iter.py
src/sb_json_tools/: __init__.py  cli.py
src/sb_json_tools/jt_iter/: __init__.py
src/sb_json_tools/jt_val/: exceptions.py
tests/: _test_cli.py  schema.json  test_cli.py  test_dicts.py  test_iter.py  test_jsondiff.py  test_jt_iter.py  test_numeric_types.py  test_streaming_validate.py  test_utils.py  utils.py  valid.json
tests/data/: array.jsonl  dict.json  valid_array.json  validated.jsonl
tests/diff/: test_compare.py
tests/iter/: test_json.py  test_jsonl.py
tests/jt_diff/: test_compare.py
tests/jt_iter/: test_init.py  test_iter.py  test_json.py  test_jsonl.py  test_utils.py
tests/jt_val/: test_numeric_types.py  test_streaming_validate.py
tests/val/: test_streaming_validate.py
tools/: pip-requires
