[tool.poetry]
name = "json-validator"
version = "0.1.0"
description = "Validate objects and files with json-schema."
authors = ["Språkbanken <sb-info@svenska.gu.se>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/spraakbanken/python-json-validator"
classifiers=[
    # As from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    # 'Development Status :: 1 - Planning',
    # 'Development Status :: 2 - Pre-Alpha',
    # 'Development Status :: 3 - Alpha',
    'Development Status :: 4 - Beta',
    # 'Development Status :: 5 - Production/Stable',
    # 'Development Status :: 6 - Mature',
    # 'Development Status :: 7 - Inactive',
    'Environment :: Console',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Operating System :: Unix',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "json_validator", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.5"
fastjsonschema = "^2.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
coverage = "^4.5"
bumpversion = "^0.5.3"

[tool.poetry.scripts]
json-validator = "json_validator.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
