[project]
name = "sb-json-tools"
version = "0.10.1"
readme = "README.md"
authors = [
    { name = "Språkbanken at the University of Gothenburg", email = "sb-info@svenska.gu.se" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
description = "Tools for working with JSON files."
classifiers = [
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    # "uncomment if you test on these interpreters:",
    # "Programming Language :: Python :: Implementation :: IronPython",
    # "Programming Language :: Python :: Implementation :: Jython",
    # "Programming Language :: Python :: Implementation :: Stackless",
    "Topic :: Utilities",
]
dependencies = [
    "fastjsonschema>=2.19.1",
    "typer>=0.12.3",
    "json-arrays>=0.14.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/spraakbanken/python-json-tools/issues"
Repository = "https://github.com/spraakbanken/python-json-tools"
Homepage = "https://github.com/spraakbanken/python-json-tools"

[project.scripts]
jt = "sb_json_tools.cli:cli"

[project.optional-dependencies]
release = ["bump-my-version>=0.21.1"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "hypothesis>=6.102.4",
]
