[metadata]
name = json-tools
author = Språkbanken at the University of Gothenburg
maintainer = Språkbanken
maintainer-email = sb-info@svenska.gu.se
summary = Tools for working with JSON files.
description-file = README.md
home-page = https://www.github.com/spraakbanken/python-json-tools
license = MIT
classifier =
	Development Status :: 2 - Pre-Alpha
    # Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    # Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    # uncomment if you test on these interpreters:
    # Programming Language :: Python :: Implementation :: IronPython
    # Programming Language :: Python :: Implementation :: Jython
    # Programming Language :: Python :: Implementation :: Stackless
    Topic :: Utilities

[files]
packages =
	json_tools
    jt_diff
    jt_iter
    jt_val

[extras]
dev =
	pytest
	pytest-cov
    flake8
    black:python_version>='3.6'
    isort
    bump2version
    pre-commit

[entry_points]
console_scripts =
    jt = json_tools.cli:cli

[tool:flake8]
max-line-length = 97
